Structural changes and new methods
